# demo_r_link

./: Cargo.toml  build.rs  demo.R
src/: bindings.h  lib.rs  wrapper.c
