[package]
name = "demo"
version = "0.1.0"
authors = ["William Brown <wbrown@suse.de>"]
edition = "2018"
links = "wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"
cbindgen = "0.9"

[dependencies]


